--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">This week</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Patrons</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -61,53 +61,8 @@
                 </div>
             </div>
         </section>
-        <!-- Services-->
-        <section class="page-section" id="services">
-            <div class="container">
-                <h2 class="text-center mt-0">At Your Service</h2>
-                <hr class="divider my-4" />
-                <div class="row">
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="card" style="width: 18rem;">
-                            <img src="/assets/img/user.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Principal</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            </div>
-                          </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="card" style="width: 18rem;">
-                            <img src="/assets/img/user.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Vice-principle</h5>
-                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            </div>
-                          </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="card" style="width: 18rem;">
-                            <img src="/assets/img/user.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            </div>
-                          </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="card" style="width: 18rem;">
-                            <img src="/assets/img/user.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            </div>
-                          </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Call to action-->
-        <section class="page-section bg-dark text-white">
+         <!-- Call to action-->
+         <section class="page-section bg-dark text-white">
             <div class="container text-center">
                 <h1>Photo gallery</h3>
             </div>
@@ -229,6 +184,53 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
+        
+        <!-- Services-->
+        <section class="page-section" id="services">
+            <div class="container">
+                <h2 class="text-center mt-0">Patrons</h2>
+                <hr class="divider my-4" />
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="card" style="width: 18rem;">
+                            <img src="/assets/img/user.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Principal</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="card" style="width: 18rem;">
+                            <img src="/assets/img/user.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Vice-principle</h5>
+                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="card" style="width: 18rem;">
+                            <img src="/assets/img/user.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="card" style="width: 18rem;">
+                            <img src="/assets/img/user.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Contact-->
         <section class="page-section" id="contact">
             <div class="container">
@@ -241,12 +243,10 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                        <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>+1 (555) 123-4567</div>
+                        <h5>Created by <a href="https://www.linkedin.com/in/kavindasr/">KSR</a></h5>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
-                        <i class="fas fa-envelope fa-3x mb-3 text-muted"></i
-                        ><!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
+                        <h5>Designed by <a href="https://www.linkedin.com/in/ravindu-balasooriya">Ravindu</a></h5>
                     </div>
                 </div>
             </div>
